--- a/src/app/componentes/resenia/resenia.component.html
+++ b/src/app/componentes/resenia/resenia.component.html
@@ -1,10 +1,13 @@
+<h2>Cliente: {{ cliente.displayName }}</h2>
+<h2>Consultorio: {{ consultorio.numero }}</h2>
+<h2>Fecha: {{ turno.fecha.toDate() | date:'dd/MM/yyyy' }} - {{ turno.hora | numHora }}</h2>
 <form [formGroup]="reseniaForm" (ngSubmit)="guardar()">
     <div class="container">
         <mat-form-field appearance="fill">
             <mat-label>Reseña</mat-label>
-            <textarea matInput placeholder="Ingrese Reseña de trabajo" [formControl]="reseniaForm.controls.resenia"></textarea>
+            <textarea matInput cdkTextareaAutosize [placeholder]="puedeGuardar ? 'Ingrese Reseña de trabajo' : ''" [formControl]="reseniaForm.controls.resenia" readonly="{{ !puedeGuardar }}"></textarea>
         </mat-form-field>
-        <button type="submit" mat-raised-button color="primary">Guardar</button>
+        <button type="submit" *ngIf="puedeGuardar" mat-raised-button color="primary">Guardar</button>
         <button type="button" mat-raised-button (click)="cerrar()">Cerrar</button>
     </div>
 </form>
